Added full flow.

--- a/app/src/main/res/layout/fragment_analyze_4_behavior_summary.xml
+++ b/app/src/main/res/layout/fragment_analyze_4_behavior_summary.xml
@@ -29,27 +29,215 @@
             />
 
         <TextView style="@style/TextViewHeading"
-            android:id="@+id/expressedHeading"
+            android:id="@+id/eventName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:labelFor="@id/situationType"
-            android:text="Sounds like the way you expressed your emotions was not as rational or healthy as it could have been. For example, you noted these errors:"
-            tools:ignore="HardcodedText" />
-
-        <TextView style="@style/TextViewDatum"
-            android:id="@+id/errors"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="Overshoulding"
+            tools:ignore="HardcodedText"
             />
 
-      <!--  <TextView style="@style/TextViewHeading"
-            android:id="@+id/doneInstead"
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:labelFor="@id/situationType"
-            android:text="What could you have done instead?"
-            tools:ignore="HardcodedText" />-->
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/thought"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/assumptions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/emotions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/thinkingErrors"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/replacementThoughts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/insteadFelt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/expressed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text11"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/relationships"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text12"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/behaviorErrors"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text13"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text14"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/moreRationalAction"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/othersReactions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView style="@style/TextViewHeading"
+            android:id="@+id/text17"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText"
+            />
 
     </LinearLayout>
 
