--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -82,6 +82,15 @@
         <item name="android:layout_marginTop">16dp</item>
     </style>
 
+    <style name="TextViewResult" parent="@android:style/Widget.TextView">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:backgroundTint">@color/colorBackground</item>
+        <item name="android:layout_marginStart">40dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:layout_marginTop">16dp</item>
+    </style>
+
     <style name="TextViewDatum" parent="@android:style/Widget.TextView">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/colorText</item>
@@ -90,12 +99,12 @@
         <item name="android:drawableStart">@drawable/ic_left_quote</item>
         <item name="android:drawableEnd">@drawable/ic_right_quote</item>
         <item name="android:drawableTint">@color/colorPrimary</item>
-        <item name="android:drawablePadding">8dp</item>
+        <item name="android:drawablePadding">16dp</item>
         <item name="android:gravity">start</item>
         <item name="android:paddingStart">4dp</item>
         <item name="android:layout_marginStart">16dp</item>
         <item name="android:layout_marginEnd">16dp</item>
-        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginTop">16dp</item>
     </style>
 
     <style name="TextViewDatumCalculated" parent="@android:style/Widget.TextView">
