--- a/app/src/main/res/layout/fragment_analyze_1_entry_summary.xml
+++ b/app/src/main/res/layout/fragment_analyze_1_entry_summary.xml
@@ -4,15 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorBackground"
+    android:id="@+id/scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-
-    <LinearLayout
-        android:id="@+id/scroll"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         >
 
         <TextView
@@ -24,27 +22,24 @@
             android:gravity="center"
             android:textSize="26sp"
             android:background="@drawable/bottom_border"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/situationLabel"
+            app:layout_constraintVertical_chainStyle="spread_inside"
             tools:ignore="HardcodedText"
             />
 
-        <Button android:theme="@style/ButtonStyle"
-            android:id="@+id/continueButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="@string/continue_cognition_validity_test"
-            android:layout_gravity="center"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            />
-
-      <!--  <TextView style="@style/TextViewHeading"
+        <TextView style="@style/TextViewHeading"
             android:id="@+id/situationLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="The situation you were in:"
+            tools:text="Your description of the situation you were in:"
+            app:layout_constraintTop_toBottomOf="@id/pageTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/situation"
+            app:layout_constraintVertical_chainStyle="spread_inside"
             tools:ignore="HardcodedText"
             />
 
@@ -55,6 +50,10 @@
             tools:text="We had a fight. I turned into a raging maniac and threw a computer against the wall."
             android:layout_marginTop="16dp"
             android:gravity="top"
+            app:layout_constraintTop_toBottomOf="@id/situationLabel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/emotionLabel"
             tools:ignore="HardcodedText"
             />
 
@@ -64,52 +63,25 @@
             android:layout_height="wrap_content"
             android:text="You felt:"
             android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/situation"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/emotions"
+            app:layout_constraintVertical_chainStyle="spread_inside"
             tools:ignore="HardcodedText"
             />
 
         <TextView style="@style/TextViewDatum"
             android:id="@+id/emotions"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Anger, Embarrassment"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/emotionLabel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/testInvitation"
             android:labelFor="@id/situationType"
-            tools:ignore="HardcodedText"
-            />-->
-
-        <TextView style="@style/TextViewHeading"
-            android:id="@+id/metaphor1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="@string/apples_metaphor_1"
-            android:layout_marginTop="8dp"
-            tools:ignore="HardcodedText"
-            />
-
-        <TextView style="@style/TextViewHeading"
-            android:id="@+id/metaphor_bullets"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="@string/apples_metaphor_bullets"
-            android:layout_marginTop="8dp"
-            tools:ignore="HardcodedText"
-            />
-
-        <TextView style="@style/TextViewHeading"
-            android:id="@+id/metaphor2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="@string/apples_metaphor_2"
-            android:layout_marginTop="8dp"
-            tools:ignore="HardcodedText"
-            />
-
-        <TextView style="@style/TextViewHeading"
-            android:id="@+id/metaphor3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="@string/apples_metaphor_3"
-            android:layout_marginTop="8dp"
             tools:ignore="HardcodedText"
             />
 
@@ -117,62 +89,68 @@
             android:id="@+id/testInvitation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="@string/check_for_apples"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="32dp"
+            tools:text="Come take the test."
+            app:layout_constraintTop_toBottomOf="@id/emotions"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/testButton"
+            android:labelFor="@id/situationType"
             tools:ignore="HardcodedText"
             />
 
-        <Button android:theme="@style/ButtonStyle"
+        <Button
             android:id="@+id/testButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:text="@string/begin_cognition_validity_test"
-            android:layout_gravity="center"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintTop_toBottomOf="@id/testInvitation"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/skipInvitation"
             />
 
         <TextView style="@style/TextViewHeading"
             android:id="@+id/skipInvitation"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Or you can skip the test because you already know that your thoughts were:"
+            android:text="@string/validitySkipInvitation"
             android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/emotions"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/skipRationalButton"
             android:labelFor="@id/situationType"
-            android:visibility="gone"
             tools:ignore="HardcodedText"
             />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/skipRationalButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:visibility="gone"
-            >
+            android:text="@string/rational"
+            android:padding="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintTop_toBottomOf="@id/skipInvitation"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/skipIrrationalButton"
+            />
 
-            <Button android:theme="@style/ButtonStyle"
-                android:id="@+id/skipRationalButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/rational"
-                android:padding="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="32dp"
-                android:layout_marginEnd="32dp"
-                tools:ignore="ButtonStyle" />
+        <Button
+            android:id="@+id/skipIrrationalButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="@string/irrational"
+            app:layout_constraintTop_toTopOf="@id/skipRationalButton"
+            app:layout_constraintStart_toEndOf="@id/skipRationalButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
-            <Button android:theme="@style/ButtonStyle"
-                android:id="@+id/skipIrrationalButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:text="@string/irrational"
-                tools:ignore="ButtonStyle" />
-
-        </LinearLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
