--- a/app/src/main/res/layout/fragment_analyze_2_cogval_summary.xml
+++ b/app/src/main/res/layout/fragment_analyze_2_cogval_summary.xml
@@ -17,7 +17,7 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Summary"
+            android:text="Cognition Validity"
             android:paddingBottom="8dp"
             android:gravity="center"
             android:textSize="26sp"
@@ -66,6 +66,16 @@
             tools:text="@string/validitySummary5Irrational"
             />
 
+        <Button android:theme="@style/ButtonStyle"
+            android:id="@+id/readMore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Read more about this"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            tools:ignore="HardcodedText"
+            />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -74,7 +84,7 @@
             >
 
             <Button android:theme="@style/ButtonStyle"
-                android:id="@+id/beginRationalButton"
+                android:id="@+id/beginRatRepButton"
                 android:layout_width="wrap_content"
                 android:minWidth="128dp"
                 android:layout_height="wrap_content"
@@ -97,7 +107,7 @@
                 />
 
             <Button android:theme="@style/ButtonStyle"
-                android:id="@+id/skipRationalButton"
+                android:id="@+id/skipToBehaviorButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/skip_to_behavior"
