--- a/app/src/main/res/layout/fragment_analyze_3_ratrep_summary.xml
+++ b/app/src/main/res/layout/fragment_analyze_3_ratrep_summary.xml
@@ -18,7 +18,7 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Summary"
+            android:text="Replacement Thoughts"
             android:gravity="center"
             android:textSize="26sp"
             android:paddingBottom="8dp"
