--- a/app/src/main/res/layout/fragment_analyze_4_behavior_summary.xml
+++ b/app/src/main/res/layout/fragment_analyze_4_behavior_summary.xml
@@ -20,7 +20,7 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Summary"
+            android:text="Behavior"
             android:gravity="center"
             android:textSize="26sp"
             android:paddingBottom="8dp"
