--- a/app/src/main/res/layout/fragment_cogval_question_2_radios.xml
+++ b/app/src/main/res/layout/fragment_cogval_question_2_radios.xml
@@ -96,6 +96,7 @@
                     android:id="@+id/radioAnswer2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     tools:text="Option 2"
                     tools:ignore="HardcodedText"
                     />
