--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,20 +4,21 @@
     tools:context="com.mozzarelly.cbthelper.MainActivity">
     <item
         android:id="@+id/action_reminder"
-        android:orderInCategory="100"
-        android:icon="@android:drawable/ic_menu_recent_history"
+        android:orderInCategory="1"
+        android:icon="@drawable/ic_bell"
+        android:iconTint="@color/colorOnBackground"
         android:title="@string/action_reminder"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="90"
         android:title="@string/action_settings"
         app:showAsAction="never" />
-    <item
+   <!-- <item
         android:id="@+id/action_delete"
         android:orderInCategory="100"
         android:title="@string/action_delete"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
     <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
