Added summary page

--- a/app/src/main/res/layout/activity_view_entries.xml
+++ b/app/src/main/res/layout/activity_view_entries.xml
@@ -39,6 +39,9 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:backgroundTint="@color/colorPrimary"
-        app:srcCompat="@drawable/ic_plus" />
+        app:srcCompat="@drawable/ic_plus"
+        app:tint="@color/colorOnBackground"
+        android:contentDescription="Add entry"
+        tools:ignore="HardcodedText" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
