--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -159,8 +159,10 @@
     <style name="ButtonStyle" parent="@style/Widget.AppCompat.Button.Colored">
         <item name="colorButtonNormal">@color/colorButtonNormal</item>
         <item name="colorAccent">@color/colorPrimary</item>
+<!--        <item name="android:padding">16dp</item>-->
 <!--        <item name="android:textSize">22sp</item>-->
-<!--        <item name="android:textColor">@color/colorText</item>-->
+        <item name="android:minHeight">48dp</item>
+        <item name="android:textColor">@color/colorOnBackground</item>
 <!--        <item name="android:background">@android:drawable/btn_default</item>-->
 <!--        <item name="android:gravity">center_vertical|center_horizontal</item>-->
     </style>
